# ShopQL

./: Cargo.toml
shopql_interpreter/: Cargo.toml
shopql_parser/: Cargo.toml
shopql_parser/src/: lib.rs  parser.rs
shopql_parser/src/utils/: custom_error.rs  defined_error.rs  mod.rs  ownership_error.rs  parse_full_input.rs  unknown_error.rs
shopql_transpiler/: Cargo.toml
