[package]
name = "shopql"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "shopql_parser",
    "shopql_interpreter",
    "shopql_transpiler",
]


[dependencies]
apollo-compiler = "0.11.3"
clap = { version = "4.5.11", features = ["derive"] }
shopql_parser = { path = "shopql_parser" }
shopql_transpiler = { path = "shopql_transpiler" }
shopql_interpreter = { path = "shopql_interpreter" }